--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Чему я научился 21.01.2021</title>
-        <link rel="stylesheet" href="files/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>21/01/2021</header>
